[package]
name = "soil-meter-s3"
version = "0.1.0"
authors = ["Craig Hamilton <cch71a@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0", features = ["embassy", "embassy-time-systick", "embassy-executor-thread"] }
embedded-graphics = "0"
ssd1306 = "0"
embassy-executor = { version = "0", features = ["nightly"] }
embassy-sync = { version = "0", features = ["nightly"] }
embassy-time = { version = "0",  features = ["nightly"] }
static_cell = { version = "1", features = ["nightly"] }
critical-section  = "1"
esp-backtrace = { version = "0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0", features = ["esp32s3","log"] }
log = { version = "0" }
heapless = "0"
